--- a/MakeMake.cfg
+++ b/MakeMake.cfg
@@ -3,8 +3,12 @@ ProgObjects = {'Franci':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '
 MainPrograms = ['Franci']
 
 # process control
-C_assembly_preprocessing = 'python.exe pre_as.py $*.s'
+#C_assembly_preprocessing = 'python.exe pre_as.py $*.s'
+C_assembly_preprocessing = ''
 object_strip = 'strip --preserve-dates --strip-unneeded $*.o'
+extra_clean = ' lib/host.zcc/*.a\n\tcd Zaimoni.STL; make clean'
+extra_targets = 'make_Zaimoni_STL:\n\tcd Zaimoni.STL; make host_install\n\n'
+extra_prereqs = ' make_Zaimoni_STL'
 
 # defines catalog
 # NDEBUG: release mode
@@ -17,5 +21,5 @@ CPP_override_libraries = {}
 
 C_enabled = ''
 C_hard_nonsystem_includedirs = []
-C_soft_nonsystem_includedirs = ['C:/MingWin.aux/Headers.lib']
+C_soft_nonsystem_includedirs = []
 
