build system changes

--- a/MakeMake.cfg
+++ b/MakeMake.cfg
@@ -1,6 +1,7 @@
 ########
-ProgObjects = {'Franci':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn')}
-MainPrograms = ['Franci']
+ProgObjects = {'Franci':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn'),
+				'Franci_console':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn')}
+MainPrograms = ['Franci','Franci_console']
 
 # process control
 #C_assembly_preprocessing = 'python.exe pre_as.py $*.s'
