make TVal.?xx compile-linked but not used

--- a/MakeMake.cfg
+++ b/MakeMake.cfg
@@ -1,6 +1,6 @@
 ########
-ProgObjects = {'Franci':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn'),
-				'Franci_console':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn')}
+ProgObjects = {'Franci':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'TVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn'),
+				'Franci_console':('LenName', 'Related', 'Destruct', 'MetaCon2','__GCF', '__IntegerNumeral', 'Integer1', 'GCF', 'SymConst', 'TruthVal', 'TVal', 'Class', 'SeriesOp', 'Combin1', 'StdAdd', 'AddMult', 'AddEqual', 'StdMult', 'EqualMult', 'Equal', 'ConEqual', 'MetaCon3', 'QState', 'Quantify', 'Variable', 'AntiIdem', 'MetaCon4', 'MetaCon5', 'LowRel', 'MetaCon1', 'AddInter', 'Interval', 'Digraph', 'SrchTree', 'main', 'OS', 'VConsole', 'Global', 'Keyword1', 'InParse', 'CmdShell', 'LexParse', 'FlatFile', 'ClauseN', 'Clause2', 'PhraseN', 'Phrase2', 'Phrase1', 'LangCon_', 'Unparsed', 'NoReturn')}
 MainPrograms = ['Franci','Franci_console']
 
 # process control
@@ -18,7 +18,7 @@ C_defines = ['NDEBUG']
 # language
 CPP_suffix = '.cxx'
 CPP_libraries = '-lz_console -lz_csvtable -lz_langconf -lz_logging -lz_log_adapter -lz_format_util -lz_stdio_c -lz_memory' # -mwindows -mno-cygwin
-CPP_override_libraries = {}
+CPP_override_libraries = {'Franci_console':'-lz_cstdio_console -lz_csvtable -lz_langconf -lz_logging -lz_log_adapter -lz_format_util -lz_stdio_c -lz_memory'}
 
 C_enabled = ''
 C_hard_nonsystem_includedirs = []
