--- a/MakeMake.cfg
+++ b/MakeMake.cfg
@@ -18,7 +18,7 @@ C_defines = ['NDEBUG']
 # language
 CPP_suffix = '.cxx'
 CPP_libraries = '-lz_console -lz_csvtable -lz_langconf -lz_logging -lz_log_adapter -lz_format_util -lz_stdio_c -lz_memory' # -mwindows -mno-cygwin
-CPP_override_libraries = {'Franci_console':'-lz_cstdio_console -lz_csvtable -lz_langconf -lz_logging -lz_log_adapter -lz_format_util -lz_stdio_c -lz_memory'}
+CPP_override_libraries = {'Franci_console':'-mconsole -lz_cstdio_console -lz_csvtable -lz_langconf -lz_logging -lz_log_adapter -lz_format_util -lz_stdio_c -lz_memory'}
 
 C_enabled = ''
 C_hard_nonsystem_includedirs = []
