deal with fallout from attempting the TVal conversion

--- a/MakeMake.cfg
+++ b/MakeMake.cfg
@@ -13,7 +13,7 @@ extra_prereqs = ' make_Zaimoni_STL'
 
 # defines catalog
 # NDEBUG: release mode
-C_defines = ['NDEBUG']
+C_defines = []
 
 # language
 CPP_suffix = '.cxx'
