--- a/Zaimoni.STL/repair.STL/GNUmakefile
+++ b/Zaimoni.STL/repair.STL/GNUmakefile
@@ -7,7 +7,7 @@
 include ../POSIX.inc
 include ../POSIX.dep
 
-CFLAGS := -fargument-alias -finline -Os -Wall -Wno-long-long --pedantic
+CFLAGS := $(CFLAGS_CORE) $(CFLAGS_STRICT)
 CXXFLAGS := $(CFLAGS)
 
 # GNU targets we know about
