take baseline (seem to have been doing some sort of error suppression)

--- a/Zaimoni.STL/OS/GNUmakefile
+++ b/Zaimoni.STL/OS/GNUmakefile
@@ -29,13 +29,13 @@ log_adapter_log.o: log_adapter_log.cpp ../pure.C/format_util.c
 	$(CXX) -c $< $(CXXFLAGS) $(ARCH_FLAGS) -o $*.o
 
 libz_log_adapter.a: log_adapter_inc_inform.o log_adapter_inform.o log_adapter_log.o
-	$(AR) -ru libz_log_adapter.a log_adapter_inc_inform.o log_adapter_inform.o log_adapter_log.o
+	$(AR) $(ARFLAGS) libz_log_adapter.a log_adapter_inc_inform.o log_adapter_inform.o log_adapter_log.o
 
 libz_console.a: console.o
-	$(AR) -ru libz_console.a console.o
+	$(AR) $(ARFLAGS) libz_console.a console.o
 
 libz_cstdio_console.a: cstdio_console.o
-	$(AR) -ru libz_cstdio_console.a cstdio_console.o
+	$(AR) $(ARFLAGS) libz_cstdio_console.a cstdio_console.o
 
 ../../$(host_libdir)/libz_log_adapter.a: libz_log_adapter.a
 	cp libz_log_adapter.a ../../$(host_libdir)/libz_log_adapter.a
