--- a/Zaimoni.STL/Pure.C/GNUmakefile
+++ b/Zaimoni.STL/Pure.C/GNUmakefile
@@ -38,10 +38,10 @@ comptest.h : comptest.in compile.test/exists_MS_io_h.c
 	$(CC) -c $< $(CFLAGS) $(ARCH_FLAGS) -o $*.o
 
 libz_format_util.a: format_util.o
-	$(AR) -ru libz_format_util.a format_util.o
+	$(AR) $(ARFLAGS) libz_format_util.a format_util.o
 
 libz_stdio_c.a: stdio_c.o
-	$(AR) -ru libz_stdio_c.a stdio_c.o
+	$(AR) $(ARFLAGS) libz_stdio_c.a stdio_c.o
 
 ../../$(host_libdir)/libz_format_util.a: libz_format_util.a
 	cp libz_format_util.a ../../$(host_libdir)/libz_format_util.a
