--- a/Zaimoni.STL/OS/GNUmakefile
+++ b/Zaimoni.STL/OS/GNUmakefile
@@ -21,9 +21,9 @@ clean:
 host_install: $(addprefix ../../$(host_libdir)/, $(LIBS))
 
 # rules
-log_adapter_inform.o: log_adapter_inform.cpp ../pure.C/format_util.c
-log_adapter_inc_inform.o: log_adapter_inc_inform.cpp ../pure.C/format_util.c
-log_adapter_log.o: log_adapter_log.cpp ../pure.C/format_util.c
+log_adapter_inform.o: log_adapter_inform.cpp ../{ure.C/format_util.c
+log_adapter_inc_inform.o: log_adapter_inc_inform.cpp ../Pure.C/format_util.c
+log_adapter_log.o: log_adapter_log.cpp ../Pure.C/format_util.c
 
 .cpp.o:
 	$(CXX) -c $< $(CXXFLAGS) $(ARCH_FLAGS) -o $*.o
