--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,12 @@ endif()
 # might actually need this?
 include_directories(${CMAKE_BINARY_DIR})
 
-# add_executable(... ...)
-# target_link_libraries(... ...)
+add_executable(Franci LenName.cxx Related.cxx Destruct.cxx MetaCon2.cxx __GCF.cxx __IntegerNumeral.cxx Integer1.cxx GCF.cxx SymConst.cxx TVal.cxx Class.cxx SeriesOp.cxx Combin1.cxx StdAdd.cxx AddMult.cxx AddEqual.cxx StdMult.cxx EqualMult.cxx Equal.cxx ConEqual.cxx MetaCon3.cxx QState.cxx Quantify.cxx Variable.cxx AntiIdem.cxx MetaCon4.cxx MetaCon5.cxx LowRel.cxx MetaCon1.cxx AddInter.cxx Interval.cxx Digraph.cxx SrchTree.cxx main.cxx OS.cxx VConsole.cxx Global.cxx Keyword1.cxx InParse.cxx CmdShell.cxx LexParse.cxx FlatFile.cxx ClauseN.cxx Clause2.cxx PhraseN.cxx Phrase2.cxx Phrase1.cxx LangCon_.cxx Unparsed.cxx NoReturn.cxx)
+target_link_libraries(Franci z_console z_csvtable z_langconf z_logging z_log_adapter z_format_util z_stdio_c z_memory)
+# add_dependencies(... AutoDetect)
+
+add_executable(Franci_console LenName.cxx Related.cxx Destruct.cxx MetaCon2.cxx __GCF.cxx __IntegerNumeral.cxx Integer1.cxx GCF.cxx SymConst.cxx TVal.cxx Class.cxx SeriesOp.cxx Combin1.cxx StdAdd.cxx AddMult.cxx AddEqual.cxx StdMult.cxx EqualMult.cxx Equal.cxx ConEqual.cxx MetaCon3.cxx QState.cxx Quantify.cxx Variable.cxx AntiIdem.cxx MetaCon4.cxx MetaCon5.cxx LowRel.cxx MetaCon1.cxx AddInter.cxx Interval.cxx Digraph.cxx SrchTree.cxx main.cxx OS.cxx VConsole.cxx Global.cxx Keyword1.cxx InParse.cxx CmdShell.cxx LexParse.cxx FlatFile.cxx ClauseN.cxx Clause2.cxx PhraseN.cxx Phrase2.cxx Phrase1.cxx LangCon_.cxx Unparsed.cxx NoReturn.cxx)
+target_link_libraries(Franci_console z_cstdio_console z_csvtable z_langconf z_logging z_log_adapter z_format_util z_stdio_c z_memory)
 # add_dependencies(... AutoDetect)
 
 # EXCLUDE_FROM_ALL means "can't test"
