--- a/Zaimoni.STL/core.RAM/CMakeLists.txt
+++ b/Zaimoni.STL/core.RAM/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.15)
 
-add_library(z_memory STATIC memory.cpp)
+add_library(z_memory SHARED memory.cpp)
 target_compile_definitions(z_memory INTERFACE ZAIMONI_HAVE_ACCURATE_MSIZE)
