test driver for Gentzen-like format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,11 @@ target_link_libraries(LogicC z_log_adapter z_stdio_log z_memory)
 target_link_options(LogicC PRIVATE /FORCE:MULTIPLE)
 target_compile_definitions(LogicC PUBLIC LOGIC_DRIVER)
 
+add_executable(Gentzen Gentzen.cpp)
+target_link_libraries(Gentzen z_log_adapter z_stdio_log z_memory)
+target_link_options(Gentzen PRIVATE /FORCE:MULTIPLE)
+target_compile_definitions(Gentzen PUBLIC GENTZEN_DRIVER)
+
 add_custom_command(TARGET Franci POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
         $<TARGET_FILE:z_memory>
