--- a/cfg/core.yaml
+++ b/cfg/core.yaml
@@ -4,3 +4,9 @@ SVO_postfix_undefined:
   - "is a unary postfix symbol"
   - "is a binary infix symbol"
   - "is a constant symbol"
+axioms:
+  - ":= is a binary infix symbol"
+  - "&#9500; is a binary infix symbol"
+  - "&#9500; is a unary prefix symbol"
+  - "& is a binary infix symbol"
+  - ", is a binary infix symbol"
